--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 layout: default
 title: "Home"
 ---
+Esta página tiene como objetivo facilitar material a los estudiantes del curso "Problemas especiales en genética 15: Genómica de procariontes" de la Universidad de Costa Rica.
+
