--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: "Home"
+layout: page
+title: "Descripción"
 ---
 Esta página tiene como objetivo facilitar material a los estudiantes del curso "Problemas especiales en genética 15: Genómica de procariontes" de la Universidad de Costa Rica.
 
