--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ title: "Descripción"
 ---
 Esta página tiene como objetivo facilitar material a los estudiantes del curso "Problemas especiales en genética 15: Genómica de procariontes" de la Universidad de Costa Rica.
 
+## Objetivos
+
+ - supports dark mode on macOS Mojave
