--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: page
 title: "Descripción"
 ---
 Esta página tiene como objetivo facilitar material a los estudiantes del curso "Problemas especiales en genética 15: Genómica de procariontes" de la Universidad de Costa Rica.
----
-layout: default
-title: "Objetivos"
----
-supports dark mode on macOS Mojave
+
+<article>
+  <header><h2>Objetivos</h2></header>
+  <p>Page not found</p>
+</article>
