--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 ---
 layout: page
-title: "Descripción"
+title: "Curso: Genómica de Procariontes"
 ---
-Esta página tiene como objetivo facilitar material a los estudiantes del curso "Problemas especiales en genética 15: Genómica de procariontes" de la Universidad de Costa Rica.
+En el presente curso se estudiarán la teoría y práctica de diferentes técnicas bioinformáticas utilizadas para el análisis de datos genéticos y genómicos en procariontes. El creciente ritmo de producción de este tipo de datos, en términos de volumen, velocidad y variedad, obliga a los biólogos de hoy en día a disponer de herramientas para poder accederlos, manipularlos y analizarlos, con el fin de transformarlos en conocimiento útil. Este curso tratará de proveer los conocimientos y herramientas para lograrlo, representando nueva opción académica altamente especializada que contribuirá a ampliar la formación de los estudiantes en un tema estratégico de la biología moderna como lo es la genómica. Se proporciona una formación tanto teórica como práctica en temas como los siguientes: Bases de datos biológicas, filogenética, metabarcoding, ensamblaje y anotación de genomas, filogenómica y genómica comparativa.
 
 <article>
-  <header><h2>Objetivos</h2></header>
-  <p>Page not found</p>
+  <header><h2>Objetivo general </h2></header>
+  <p>Comprender los fundamentos teóricos y prácticos del análisis de datos genéticos y genómicos de procariotas mediante el uso de técnicas bioinformáticas modernas.</p>
+</article>
+
+<article>
+  <header><h2>Objetivos específicos </h2></header>
+  <p>
+1.	Explorar las diferentes bases de datos biológicas 
+2.	Utilizar de manera básica la terminal de comandos Unix
+3.	Utilizar adecuadamente los marcadores moleculares para la construcción de filogenias
+4.	Realizar análisis de comunidades a partir de marcadores moleculares
+5.	Ensamblar y anotar genomas procariotas a partir de datos de secuenciación de aislamientos cultivables
+6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación. 
+</p>
 </article>
