--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@ En el presente curso se estudiarán la teoría y práctica de diferentes técnic
 <article>
   <header><h2>Objetivos específicos </h2></header>
   <p>
-1.	Explorar las diferentes bases de datos biológicas 
-2.	Utilizar de manera básica la terminal de comandos Unix
-3.	Utilizar adecuadamente los marcadores moleculares para la construcción de filogenias
-4.	Realizar análisis de comunidades a partir de marcadores moleculares
-5.	Ensamblar y anotar genomas procariotas a partir de datos de secuenciación de aislamientos cultivables
-6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación. 
+1.	Explorar las diferentes bases de datos biológicas  <br>
+2.	Utilizar de manera básica la terminal de comandos Unix  <br>
+3.	Utilizar adecuadamente los marcadores moleculares para la construcción de filogenias  <br>
+4.	Realizar análisis de comunidades a partir de marcadores moleculares  <br>
+5.	Ensamblar y anotar genomas procariotas a partir de datos de secuenciación de aislamientos cultivables  <br>
+6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación  <br>
 </p>
 </article>
+
+// CSS
+p {
+  text-align: center;
+}
