--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ En el presente curso se estudiarán la teoría y práctica de diferentes técnic
 
 <article>
   <header><h2>Objetivo general </h2></header>
-  <p>Comprender los fundamentos teóricos y prácticos del análisis de datos genéticos y genómicos de procariotas mediante el uso de técnicas bioinformáticas modernas.</p>
+  <p align="justify">Comprender los fundamentos teóricos y prácticos del análisis de datos genéticos y genómicos de procariotas mediante el uso de técnicas bioinformáticas modernas.</p>
 </article>
 
 <article>
