--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="/assets/2.jpg" alt="Logo" />
+<img src="/assets/2.png" alt="Logo" />
 ---
 layout: page
 title: "Curso: Genómica de Procariontes"
