--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@ title: "Curso: Genómica de Procariontes"
 6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación  <br>
 </p>
 </article>
+<img
+  src="2.png"
+  alt="The head and torso of a dinosaur skeleton;
+          it has a large head with long sharp teeth"
+  width="80"
+  height="50" />
+    
 </html>
 
