--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@ title: "Curso: Genómica de Procariontes"
 6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación  <br>
 </p>
 </article>
-<img
+
+  #ImSticky {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+    
+  <img id="ImSticky"
   src="2.png"
   alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
