--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: "Curso: Genómica de Procariontes"
 </p>
 </article>
 
-  #ImSticky {
+  ImSticky {
   position: fixed;
   bottom: 0;
   right: 0;
