--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@ title: "Curso: Genómica de Procariontes"
 </p>
 </article>
 
-  ImSticky {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
-    
-  <img id="ImSticky"
+  <img id="ImSticky" align="right"
   src="2.png"
   alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
-  width="80"
-  height="50" />
+  width="400"
+  height="300" />
     
 </html>
 
