--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: "Curso: Genómica de Procariontes"
 </article>
 
   <img id="ImSticky" align="right"
-  src="2.png"
+  src="logo.png"
   alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
   width="120"
