--- a/index.html
+++ b/index.html
@@ -7,29 +7,12 @@ title: "Curso: Genómica de Procariontes"
 </p>
 </article>
   <html>
-<article>
-  <header><h2>Objetivo general </h2></header>
-  <p align="justify">Comprender los fundamentos teóricos y prácticos del análisis de datos genéticos y genómicos de procariotas mediante el uso de técnicas bioinformáticas modernas.</p>
-</article>
-
-<article>
-  <header><h2>Objetivos específicos </h2></header>
-  <p>
-1.	Explorar las diferentes bases de datos biológicas  <br>
-2.	Utilizar de manera básica la terminal de comandos Unix  <br>
-3.	Utilizar adecuadamente los marcadores moleculares para la construcción de filogenias  <br>
-4.	Realizar análisis de comunidades a partir de marcadores moleculares  <br>
-5.	Ensamblar y anotar genomas procariotas a partir de datos de secuenciación de aislamientos cultivables  <br>
-6.	Comparar genomas procariotas con el fin de encontrar diferencias funcionales y evolutivas que permitan entender los procesos de adaptación  <br>
-</p>
-</article>
-
-  <img id="ImSticky" align="right"
+  <img id="ImSticky" align="center"
   src="logo.png"
   alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
-  width="120"
-  height="80" />
+  width="1200"
+  height="800" />
     
 </html>
 
