--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "Curso: Genómica de Procariontes"
 ---
 <article>
-<p align="justify"> En el presente curso se estudiarán la teoría y práctica de diferentes técnicas bioinformáticas utilizadas para el análisis de datos genéticos y genómicos en procariontes. El creciente ritmo de producción de este tipo de datos, en términos de volumen, velocidad y variedad, obliga a los biólogos de hoy en día a disponer de herramientas para poder accederlos, manipularlos y analizarlos, con el fin de transformarlos en conocimiento útil. Este curso tratará de proveer los conocimientos y herramientas para lograrlo, representando nueva opción académica altamente especializada que contribuirá a ampliar la formación de los estudiantes en un tema estratégico de la biología moderna como lo es la genómica. Se proporciona una formación tanto teórica como práctica en temas como los siguientes: Bases de datos biológicas, filogenética, metabarcoding, ensamblaje y anotación de genomas, filogenómica y genómica comparativa.
+<p align="center"> En el presente curso se estudiarán la teoría y práctica de diferentes técnicas bioinformáticas utilizadas para el análisis de datos genéticos y genómicos en procariontes. El creciente ritmo de producción de este tipo de datos, en términos de volumen, velocidad y variedad, obliga a los biólogos de hoy en día a disponer de herramientas para poder accederlos, manipularlos y analizarlos, con el fin de transformarlos en conocimiento útil. Este curso tratará de proveer los conocimientos y herramientas para lograrlo, representando nueva opción académica altamente especializada que contribuirá a ampliar la formación de los estudiantes en un tema estratégico de la biología moderna como lo es la genómica. Se proporciona una formación tanto teórica como práctica en temas como los siguientes: Bases de datos biológicas, filogenética, metabarcoding, ensamblaje y anotación de genomas, filogenómica y genómica comparativa.
 </p>
 </article>
   <html>
@@ -11,8 +11,8 @@ title: "Curso: Genómica de Procariontes"
   src="logo.png"
   alt="The head and torso of a dinosaur skeleton;
           it has a large head with long sharp teeth"
-  width="1200"
-  height="800" />
+  width="1000"
+  height="600" />
     
 </html>
 
