--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@ title: "Curso: Genómica de Procariontes"
   <html>
   <img id="ImSticky" align="center"
   src="logo.png"
-  alt="The head and torso of a dinosaur skeleton;
-          it has a large head with long sharp teeth"
-  width="1000"
+  alt="logo"
+  width="800"
   height="600" />
     
 </html>
