--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: "Curso: Genómica de Procariontes"
 </p>
 </article>
   <html>
-  <img id="ImSticky" align="center"
+  <img id="ImSticky" class="center"
   src="logo.png"
   alt="logo"
-  width="800"
-  height="600" />
+  width="600"
+  height="400" />
     
 </html>
 
