--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: "Curso: Genómica de Procariontes"
 <p align="center"> En el presente curso se estudiarán la teoría y práctica de diferentes técnicas bioinformáticas utilizadas para el análisis de datos genéticos y genómicos en procariontes. El creciente ritmo de producción de este tipo de datos, en términos de volumen, velocidad y variedad, obliga a los biólogos de hoy en día a disponer de herramientas para poder accederlos, manipularlos y analizarlos, con el fin de transformarlos en conocimiento útil. Este curso tratará de proveer los conocimientos y herramientas para lograrlo, representando nueva opción académica altamente especializada que contribuirá a ampliar la formación de los estudiantes en un tema estratégico de la biología moderna como lo es la genómica. Se proporciona una formación tanto teórica como práctica en temas como los siguientes: Bases de datos biológicas, filogenética, metabarcoding, ensamblaje y anotación de genomas, filogenómica y genómica comparativa.
 </p>
 </article>
-  <img id="ImSticky" class="center"
+  <center><img id="ImSticky" class="center"
   src="logo.png"
   alt="logo"
   width="600"
-  height="400" />
+  height="400" /> <center/>
     
 </html>
 
